--- a/bootcamp/exercises/week-1/css grid/chatoptimal/style.css
+++ b/bootcamp/exercises/week-1/css grid/chatoptimal/style.css
@@ -24,7 +24,9 @@
 #chatbox{
   grid-area: c;
   display: grid;
-  background-color:rgb(243, 252, 255)
+  background-color:rgb(243, 252, 255);
+  grid-template-columns: 1fr;
+  grid-template-columns: "x";
 }
 
 #input{
@@ -38,13 +40,21 @@
 }
 
 .text-container-right{
+  position: relative;
+  justify-self: end;
+  grid-area: "x";
   background-color: rgb(0, 192, 0);
-  display: inline-block;
+  width:fit-content;
+  height:fit-content;
+
 }
 
 .text-container-left{
+  grid-area: "x";
   background-color: gray;
   margin: 10px;
+  width:fit-content;
+  height:fit-content;
 }
 
 #send{
